fix links text alignment

--- a/styles/style.css
+++ b/styles/style.css
@@ -64,7 +64,7 @@ body{
     padding: 1rem 0;
 }
 
-img{
+.apresentacao-presidente-imagem{
     width: 40%;
     border-radius: 5%;
 }
@@ -107,17 +107,22 @@ img{
 
 .apresentacao-presidente-links{
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     background-color: var(--cor-destaque);
-    width: 20%;
+    width: 18rem;
     font-family: var(--fonte-secundaria);
     gap: 1rem;
     font-size: 1rem;
-    text-align: center;
+    align-items: center;
     border-radius: 0.5rem;
     padding: 1.3rem 0;
     color: var(--cor-primaria);
     text-decoration: none;
+}
+
+.apresentacao-presidente-links-icone{
+    width: 10%;
 }
 
 .apresentacao-presidente-links:hover{
